# portfolio-rebalancer

./: .env.example  .gitignore  Makefile  README.md  compose.yaml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260713_0001_initial_schema.py  20260713_0002_settings_singleton.py  20260713_0003_active_holding_identity.py  20260714_0004_snapshot_payload.py  20260714_0005_rebalance_plan_lifecycle.py  20260714_0006_holding_preferred_data_source.py  20260715_0007_rebalance_defaults.py
backend/app/: main.py  worker.py
backend/app/api/: router.py
backend/app/core/: config.py  decimal.py  market.py  secrets.py
backend/app/db/: models.py  session.py
backend/app/domain/: analytics.py  cost_basis.py  rebalance.py
backend/app/providers/: akshare.py  alpha_vantage.py  base.py  sina.py  tushare.py  yahoo.py
backend/app/schemas/: analytics.py  asset_class.py  common.py  cost_adjustment.py  holding.py  market_data.py  rebalance.py  settings.py  snapshot.py
backend/app/services/: analytics.py  asset_classes.py  baseline.py  cost_adjustments.py  errors.py  holdings.py  market_data.py  rebalancing.py  settings.py  snapshots.py
backend/tests/: conftest.py
backend/tests/integration/: test_analytics_api.py  test_asset_classes_api.py  test_backup_restore.py  test_cost_adjustments_api.py  test_default_strategy.py  test_holdings_api.py  test_market_data_api.py  test_migrations.py  test_rebalance_api.py  test_rebalance_lifecycle.py  test_settings_api.py  test_snapshots.py
backend/tests/unit/: test_analytics.py  test_analytics_properties.py  test_cost_basis.py  test_cost_basis_properties.py  test_health.py  (+8 more)
(+138 files in other folders)
