[project]
name = "portfolio-rebalancer-api"
version = "0.1.0"
description = "Local portfolio rebalancing API"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16,<2",
    "apscheduler>=3.10.4,<4",
    "asyncpg>=0.30,<1",
    "fastapi>=0.116,<1",
    "greenlet>=3.1,<4",
    "pydantic-settings>=2.10,<3",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "hypothesis>=6.156.6",
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.1,<2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
